--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ optree==0.16.0
 packaging==25.0
 pandas==2.3.1
 pillow==11.3.0
-protobuf==5.29.5
+protobuf<3.20
 psutil==7.0.0
 py-cpuinfo==9.0.0
 pyasn1==0.6.1
@@ -72,10 +72,10 @@ six==1.17.0
 soupsieve==2.7
 sqlite-vec==0.1.6
 sympy==1.14.0
-tensorboard==2.19.0
+tensorboard==2.11.1
 tensorboard-data-server==0.7.2
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.19.0
+tensorflow==2.11.1
 tensorflow-estimator==2.11.0
 tensorflow-intel==2.11.1
 tensorflow-io-gcs-filesystem==0.31.0
