--- a/modularized/requirements.txt
+++ b/modularized/requirements.txt
@@ -17,7 +17,7 @@ flask-cors==6.0.1
 flatbuffers==25.2.10
 fonttools==4.58.5
 fsspec==2025.5.1
-gast==0.6.0
+gast<=0.4.0
 gdown==5.2.0
 google-auth==2.40.3
 google-auth-oauthlib==0.4.6
