--- a/modularized/requirements.txt
+++ b/modularized/requirements.txt
@@ -73,7 +73,7 @@ sympy==1.14.0
 tensorboard==2.11.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.1
+tensorflow>=2.19
 tensorflow-estimator==2.11.0
 tensorflow-intel==2.11.1
 tensorflow-io-gcs-filesystem==0.31.0
