--- a/modularized/requirements.txt
+++ b/modularized/requirements.txt
@@ -28,7 +28,7 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.5.1
-keras==2.11.0
+keras==3.10.0
 kiwisolver==1.4.8
 libclang==18.1.1
 lz4==4.4.4
@@ -69,10 +69,10 @@ six==1.17.0
 soupsieve==2.7
 sqlite-vec==0.1.6
 sympy==1.14.0
-tensorboard==2.11.1
-tensorboard-data-server==0.6.1
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
 tensorboard-plugin-wit==1.8.1
-tensorflow>=2.19
+tensorflow==2.19.0
 tensorflow-estimator==2.11.0
 tensorflow-intel==2.11.1
 tensorflow-io-gcs-filesystem==0.31.0
