--- a/modularized/docker-compose.yml
+++ b/modularized/docker-compose.yml
@@ -1,39 +1,3 @@
-# version: '3.8'
-
-# services:
-#   lab-monitoring:
-#     build: .
-#     container_name: lab-monitoring-app
-#     ports:
-#       - "5000:5000"
-#     volumes:
-#       - ./web/static/incompliances:/app/web/static/incompliances
-#       - ./users.sqlite:/app/users.sqlite
-#       - ./yolo_models:/app/yolo_models
-#     environment:
-#       - FLASK_ENV=production
-#       - PYTHONPATH=/app
-#     restart: unless-stopped
-#     devices:
-#       - /dev/video0:/dev/video0  # For camera access (Linux)
-#     privileged: true  # Required for camera access
-
-#   # Optional: Add a database service if you want to use PostgreSQL instead of SQLite
-#   # postgres:
-#   #   image: postgres:13
-#   #   container_name: lab-monitoring-db
-#   #   environment:
-#   #     POSTGRES_DB: lab_monitoring
-#   #     POSTGRES_USER: labuser
-#   #     POSTGRES_PASSWORD: labpass
-#   #   volumes:
-#   #     - postgres_data:/var/lib/postgresql/data
-#   #   ports:
-#   #     - "5432:5432"
-
-# volumes:
-#   postgres_data:
-
 version: '3.8'
 
 services:
@@ -41,10 +5,12 @@ services:
     build: .
     container_name: lab-monitoring-app
     ports:
-      - "5000:5000"
+      - "5001:5000"
     volumes:
       - ./web/static/incompliances:/app/web/static/incompliances
       - ./yolo_models:/app/yolo_models
+    env_file:
+      - .env  # This tells Docker Compose to load environment variables from the .env file
     environment:
       - FLASK_ENV=${FLASK_ENV}
       - PYTHONPATH=${PYTHONPATH}
@@ -58,7 +24,8 @@ services:
       - /dev/video0:/dev/video0
     privileged: true
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy  # Ensure the DB is healthy before starting app
 
   postgres:
     image: postgres:13
@@ -72,6 +39,12 @@ services:
     ports:
       - "5432:5432"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}"]
+      interval: 10s
+      retries: 5
+      timeout: 5s
+      start_period: 10s
 
 volumes:
   postgres_data:
