--- a/modularized/docker-compose.yml
+++ b/modularized/docker-compose.yml
@@ -61,6 +61,7 @@ services:
 
   pgadmin:
     image: dpage/pgadmin4
+    container_name: pgadmin
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@labcomply.com
       PGADMIN_DEFAULT_PASSWORD: admin123
