env example changes

--- a/modularized/.env.example
+++ b/modularized/.env.example
@@ -7,3 +7,6 @@ POSTGRES_USER=postgres          # your database username
 POSTGRES_PASSWORD=your_pass     # your database password
 POSTGRES_HOST=postgres          # use localhost if running on your machine
 POSTGRES_PORT=5432              # default PostgreSQL port
+
+# Number of CUDA GPU available (at least 1)
+GPU_COUNT=1
