--- a/modularized/docker-compose.yml
+++ b/modularized/docker-compose.yml
@@ -3,14 +3,14 @@ version: "3.8"
 services:
   lab-monitoring:
     build: .
-    #    deploy:
-    #      resources:
-    #        reservations:
-    #          devices:
-    #            - driver: nvidia
-    #              count: all
-    #              capabilities: [gpu]
-    #    runtime: nvidia
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+    runtime: nvidia
     container_name: lab-monitoring-app
     ports:
       - "5001:5000"
