--- a/modularized/docker-compose.yml
+++ b/modularized/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - .env # This tells Docker Compose to load environment variables from the .env file
     environment:
       - FLASK_APP=app.py
+      - PYTHONUNBUFFERED=1 # To have print statements to docker logs
       - FLASK_ENV=${FLASK_ENV}
       - PYTHONPATH=${PYTHONPATH}
       - DB_HOST=${POSTGRES_HOST}
@@ -53,7 +54,7 @@ services:
     restart: unless-stopped
     healthcheck:
       test:
-        [ "CMD", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}" ]
+        ["CMD", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}"]
       interval: 10s
       retries: 5
       timeout: 5s
@@ -68,7 +69,7 @@ services:
     ports:
       - "8080:80"
     depends_on:
-      - postgres  # your PostgreSQL container name
+      - postgres # your PostgreSQL container name
     volumes:
       - ./pgadmin_config/servers/servers.json:/pgadmin4/servers.json
 
