created basic documentation homepage with mkdocs

--- a/modularized/.env.example
+++ b/modularized/.env.example
@@ -10,3 +10,7 @@ POSTGRES_PORT=5432              # default PostgreSQL port
 
 # Number of CUDA GPU available (at least 1)
 GPU_COUNT=1
+
+MQTT_USERNAME=
+MQTT_PASSWORD=
+MQTT_BROKER=
