--- a/modularized/mkdocs.yml
+++ b/modularized/mkdocs.yml
@@ -1,3 +1,23 @@
 site_name: AI-Powered-Lab-Compliance-Monitoring
 nav:
   - Home: index.md
+  - 'Camera':
+    - 'CameraDiscovery': camera/camera_discovery.md
+    - 'CameraManagery': camera/camera_manager.md
+    - 'Camera': camera/camera.md
+  - 'Detection':
+    - 'DetectionManager': detection/detection_manager.md
+    - 'Model': detection/model.md
+  - 'Incompliance':
+    - 'ProcessIncompliance': incompliance/process_incompliance.md
+    - 'NVR': incompliance/nvr.md
+    - 'EmailService': incompliance/emailservice.md
+    - 'Saver': incompliance/saver.md
+
+plugins:
+  - mkdocstrings:
+      handlers:
+        python:
+          paths: [shared, threads]
+          options:
+            show_root_toc_entry: false
