--- a/modularized/docker-compose.yml
+++ b/modularized/docker-compose.yml
@@ -42,15 +42,20 @@ services:
   postgres:
     image: postgres:13
     container_name: lab-monitoring-db
+    env_file:
+      - .env
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_MULTIPLE_DATABASES=${POSTGRES_DB},${POSTGRES_DB_TEST}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./db/init-multiple-db.sh:/docker-entrypoint-initdb.d/init-multiple-db.sh
     ports:
-      - "5432:5432"
+      # - "5432:5432"
+      - "${POSTGRES_PORT}:5432"
     restart: unless-stopped
     healthcheck:
       test:
